--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sanity/client": "^7.15.0",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.22.0",
     "autoprefixer": "^10.4.24",
     "framer-motion": "^12.34.1",
     "lucide-react": "^0.574.0",
     "next": "16.1.6",
+    "next-sanity": "^11.6.12",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "resend": "^6.9.2"
+    "resend": "^6.9.2",
+    "sanity": "^4.22.0",
+    "styled-components": "^6.3.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
